@@ -3,11 +3,10 @@ package team.k.repository;
 import team.k.enumerations.FoodType;
 import team.k.restaurant.Restaurant;
 
-import java.time.LocalTime;
+import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class RestaurantRepository {
     private final List<Restaurant> restaurants = new ArrayList<>();
@@ -61,10 +60,10 @@ public class RestaurantRepository {
     public List<Restaurant> findRestaurantByFoodType(List<FoodType> foodTypes) {
         return this.restaurants.stream()
                 .filter(restaurant -> restaurant.getFoodTypes().stream().anyMatch(foodTypes::contains))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public List<Restaurant> findRestaurantsByAvailability(LocalTime timeChosen) {
+    public List<Restaurant> findRestaurantsByAvailability(LocalDateTime timeChosen) {
         return this.findAll().stream().filter(restaurant -> restaurant.isAvailable(timeChosen)).toList();
     }
 
